--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,4 @@
-{<img alt="Status?branch=master" src="https://www.codeship.io/projects/f758c4c0-8d8e-0131-79d8-6e593527c391/status?branch=master" />}[https://www.codeship.io/projects/16035]
+{<img alt="Status?branch=master" src="https://www.codeship.io/projects/f758c4c0-8d8e-0131-79d8-6e593527c391/status?branch=develop" />}[https://www.codeship.io/projects/16035]
 ## Development environment setup
 
 Codeship testing
